--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "practice dev tools",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
     "my-script": "node script/myScript.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,5 +13,9 @@
     "url": "git@github.com-leenawon:leenawon/news-board.git"
   },
   "author": "leenawon",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
