--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "leenawon",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
