--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:dev": "webpack --config webpack.config.js --mode=development",
     "build:prod": "webpack --config webpack.config.js --mode=production",
     "transpile": "babel src/javascript -d transpile",
+    "test:jest": "jest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +32,7 @@
     "eslint-plugin-import": "^2.27.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.4.2",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "2.8.4",
     "style-loader": "^3.3.1",
