--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
