--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "prettier": "2.8.4",
     "style-loader": "^3.3.1",
     "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^29.0.0",
+    "stylelint-prettier": "^2.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
